Added TypeScript type checking command to package.json and updated pre-commit hook to include type checking.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "biome format --write",
     "prepare": "husky",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate"
+    "db:migrate": "drizzle-kit migrate",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@types/pg": "^8.15.5",
