--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hono/zod-validator": "^0.7.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@types/pg": "^8.15.5",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.4",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
