feat: Implement learning record management with new database schema and service
This commit introduces a new feature for managing learning records in the application. Key changes include:
- Added a new SQL schema for `learning_records`, `sessions`, and `word_books`, including necessary foreign key constraints.
- Created a `LearningRecord` entity and its corresponding repository interface for CRUD operations.
- Implemented a `LearningRecordService` to handle business logic related to learning records.
- Updated the database schema to include a new enum type for learning results.
- Refactored existing code to integrate the new learning record functionality, enhancing the overall application structure.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "biome check",
+    "lint": "biome check --write --unsafe",
     "format": "biome format --write",
     "prepare": "husky",
     "db:generate": "drizzle-kit generate",
