--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Run build
+        run: bun run build
+
       - name: Run typecheck
         run: bun run typecheck
 
