--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,21 +1,20 @@
 services:
-  app:
+  app-prod:
     container_name: app-prod
     build:
       context: .
-      dockerfile: Dockerfile
-      target: runner
+      dockerfile: Dockerfile.prod
     environment:
       - NODE_ENV=production
-      - DATABASE_URL=postgres://postgres:postgres@db:5432/app_db
+      - DATABASE_URL=postgres://postgres:postgres@db-prod:5432/app_db
       - PORT=3001
     ports:
       - "3001:3001"
     depends_on:
-      - db
+      - db-prod
     restart: always
 
-  db:
+  db-prod:
     image: postgres:17-alpine
     container_name: db-prod
     restart: always
@@ -26,7 +25,7 @@ services:
     volumes:
       - db_data_prod:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5433:5432"
 
 volumes:
   db_data_prod:
