refactor: Simplify Dockerfile by removing git clone step and directly copying package files

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,19 +1,15 @@
-FROM alpine/git AS clone
-
-RUN git clone https://github.com/ayu0616/word-book.git /app
-
 FROM oven/bun:1 AS deps
 
 WORKDIR /app
 
-COPY --from=clone /app/package.json /app/bun.lock* ./
+COPY package.json bun.lock* ./
 RUN bun install --frozen-lockfile
 
 FROM oven/bun:1 AS builder
 
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
-COPY --from=clone /app .
+COPY . .
 
 # Next.js をビルド
 RUN bun run build
