--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "db:migrate": "drizzle-kit migrate",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "db:migrate-prod": "DATABASE_URL=postgres://postgres:postgres@localhost:5433/app_db drizzle-kit migrate"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.4",
